# internal/http/handler/webui/ask/handler.go
@@ -28,6 +28,7 @@ func NewHandler(documentManager *service.DocumentManager, llm llm.Client) *Handl
 	h.mux.HandleFunc("GET /", h.getAskPage)
 	h.mux.HandleFunc("POST /", h.handleAsk)
 	h.mux.HandleFunc("POST /index", h.handleIndex)
+	h.mux.HandleFunc("GET /tasks/{taskID}", h.getTaskPage)
 
 	return h
 }
